RESOLVED FIXED160398
Database Process: ASSERTION FAILED: filePaths.size() == result.handles().size() with SANDBOX_EXTENSIONS disabled
https://bugs.webkit.org/show_bug.cgi?id=160398
Summary Database Process: ASSERTION FAILED: filePaths.size() == result.handles().size...
Carlos Garcia Campos
Reported 2016-08-01 01:05:19 PDT
Same assert as in bug #160188, but this time in preregisterSandboxExtensionsIfNecessary. It seems we need more ifdefs. Several tests are still crashing before of this in the GTK+ debug bot.
Attachments
Patch (9.54 KB, patch)
2016-08-01 01:08 PDT, Carlos Garcia Campos
beidson: review+
Carlos Garcia Campos
Comment 1 2016-08-01 01:08:10 PDT
Carlos Garcia Campos
Comment 2 2016-08-01 22:41:31 PDT
Note You need to log in before you can comment on or make changes to this bug.