Source/WebKit2/DatabaseProcess/IndexedDB/WebIDBConnectionToClient.cpp
@@ -139,10 +139,14 @@ template<class MessageType> void WebIDBConnectionToClient::handleGetResult(const
         return;
     }
 
+#if ENABLE(SANDBOX_EXTENSIONS)
     RefPtr<WebIDBConnectionToClient> protector(this);
     DatabaseProcess::singleton().getSandboxExtensionsForBlobFiles(blobFilePaths, [protector, this, resultData](SandboxExtension::HandleArray&& handles) {
         send(MessageType({ resultData, WTFMove(handles) }));
     });
+#else
+    send(MessageType(resultData));
+#endif
 }
 
 void WebIDBConnectionToClient::didGetRecord(const WebCore::IDBResultData& resultData)
