Source/WebKit2/UIProcess/Databases/DatabaseProcessProxy.cpp
@@ -196,6 +196,7 @@ void DatabaseProcessProxy::didDeleteWebsiteDataForOrigins(uint64_t callbackID)
     callback();
 }
 
+#if ENABLE(SANDBOX_EXTENSIONS)
 void DatabaseProcessProxy::getSandboxExtensionsForBlobFiles(uint64_t requestID, const Vector<String>& paths)
 {
     SandboxExtension::HandleArray extensions;
@@ -207,6 +208,7 @@ void DatabaseProcessProxy::getSandboxExtensionsForBlobFiles(uint64_t requestID, 
 
     send(Messages::DatabaseProcess::DidGetSandboxExtensionsForBlobFiles(requestID, extensions), 0);
 }
+#endif
 
 void DatabaseProcessProxy::didFinishLaunching(ProcessLauncher* launcher, IPC::Connection::Identifier connectionIdentifier)
 {
